--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 15 23:22:16 BRT 2023
-sdk.dir=/Users/sosthenesoliveiralima/Library/Android/sdk
+#Sun Nov 26 11:20:38 BRT 2023
+sdk.dir=C\:\\Users\\gt3ix\\AppData\\Local\\Android\\Sdk
