--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 06 21:22:11 BRT 2023
-sdk.dir=C\:\\Users\\Thiago Souza\\AppData\\Local\\Android\\Sdk
+#Wed Dec 06 23:39:56 BRT 2023
+sdk.dir=C\:\\Users\\gt3ix\\AppData\\Local\\Android\\Sdk
